# RAGs

./: 1-rag_evaluation.ipynb  Chromadb.ipynb  HandsOn1.ipynb  Pineconedb.ipynb  RAGInterview.md  RAGNotes.md  README.md  VectorDBs_Comparison.py  app.py  faisstutorial.ipynb  pyproject.toml  ragproject.py  requirements.txt  typesense.ipynb  vector_database_comparison_results.json
TraditionalRAG/: document.ipynb  pdf_loader.ipynb
VectorlessRAG/: VectorlessRAGInterview.md  VectorlessRAGnotes.md
chroma_groq_db/: chroma.sqlite3
data/excel/: CarsDrivenTillNow.xlsx
data/vector_store/: chroma.sqlite3
faiss_store/: faiss.index  metadata.pkl
src/: data_loader.py  search.py
